--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="" class="logo">WebStudio</a>
 
             <ul class="header-nav">
-                <li><a class="link" href="">Студия</a></li> 
-                <li><a href="">Портфолио</a></li>
+                <li><a href="" class="link current">Студия</a></li> 
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
     <main>
         <section class="section-phone-with-a-button">
             <h1 class="section-title-with-a-button">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button class="button">Заказать услугу</button>
         </section>
 
         <section>
