--- a/portfolio.html
+++ b/portfolio.html
@@ -53,47 +53,47 @@
 
     <ul>
        <li>
-            <img src="./image/Відкритий ноут (1).jpg" width="370" alt="Відкритий ноут" >
+            <img src="./image/5.jpg" width="370" alt="Відкритий ноут" >
             <h2>Технокряк</h2>
             <p>Веб-сайт</p> 
         </li> 
         <li>
-            <img src="./image/Баскетбол (1).jpg" width="370" alt="Баскетбол">
+            <img src="./image/6.jpg" width="370" alt="Баскетбол">
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
-            <img src="./image/Постер риби (1).jpg" width="370" alt="Постер риби">
+            <img src="./image/7.jpg" width="370" alt="Постер риби">
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
         </li>
         <li>
-            <img src="./image/Навушники (1).jpg" width="370" alt="Навушники">
+            <img src="./image/8.jpg" width="370" alt="Навушники">
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
         </li>
         <li>
-            <img src="./image/Коробки (1).jpg" width="370" alt="Коробки">
+            <img src="./image/9.jpg" width="370" alt="Коробки">
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
         </li>
         <li>
-            <img src="./image/Мак (1).jpg" width="370" alt="Мак">
+            <img src="./image/10.jpg" width="370" alt="Мак">
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
-            <img src="./image/Відкрита книга (1).jpg" width="370" alt="Відкрита книга">
+            <img src="./image/11.jpg" width="370" alt="Відкрита книга">
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
         </li>
         <li>
-            <img src="./image/Кулон (1).jpg" width="370" alt="Кулон">
+            <img src="./image/12.jpg" width="370" alt="Кулон">
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
         </li>
         <li>
-            <img src="./image/Відкритий ноут (1).jpg" width="370" alt="Відкритий ноут">
+            <img src="./image/13.jpg" width="370" alt="Відкритий ноут">
             <h2>Growing Business</h2>
             <p>Приложение</p>
         </li>
@@ -104,13 +104,13 @@
 </main>
 
 <footer>
-    <a href="">WebStudio</a> <br>
-    <address>
-        г. Киев, пр-т Леси Украинки, 26 <br>
-        <a href="maito:info@example.com">info@example.com</a><br>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
-    </address>
-</footer>
+        <a href="">WebStudio</a> <br>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="maito:info@example.com">info@example.com</a><br>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+    </footer>
 
 
 </body>
